Implementando Header Menu e Footer

--- a/angular1/app/template/footer.html
+++ b/angular1/app/template/footer.html
@@ -1,1 +1,3 @@
-<h1>Footer</h1>
+<strong>Copyright &copy; 2018
+    <a href="https://github.com/israelmesquita07" target="_blank">Israel_GitHub</a>.
+</strong>
